--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head prefix="og: http://ogp.me/ns#">
 
 	<!--    SITE BUILD INFORMATION    -->
-<!--    Date built:    2021-05-20    -->
-<!--    Time built:    18:43    -->
+<!--    Date built:    2021-08-05    -->
+<!--    Time built:    20:43    -->
 <!--    Site URL:    https://www.johnpe.art    -->
 <!--    Site base URL:    /email-signatures    -->
 
@@ -97,10 +97,13 @@
 
 	<!-- Favicons -->
 	<!-- Place favicon.ico in the root directory - no tag necessary -->
-	<meta name="theme-color" content="#009fe3">
 	<link rel="icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon.svg">
 	<link rel="mask-icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon-pinned-svg.svg" color="#009fe3">
 	<link rel="apple-touch-icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon-large-png.png">
+
+	<!-- Safari toolbar colors -->
+	<meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="#1d1d1d" media="(prefers-color-scheme: dark)">
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://www.johnpe.art/email-signatures/assets/styles/styles.css">
